--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/tipconnect
+spring.datasource.username = root
+spring.datasource.password =
+spring.jpa.hibernate.ddl-auto = create-drop
 
+spring.mail.host = localhost
+spring.mail.port = 1025
+spring.mail.username = hello
+spring.mail.password = hello
+spring.mail.properties.mail.smtp.ssl.trust = "*"
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.connectiontimeout = 5000
+spring.mail.properties.mail.smtp.timeout = 3000
+spring.mail.properties.mail.smtp.writetimeout = 5000
