add UserController, fix filterJwt request bind, add handle request get ListFriend use StreamingResponseBody

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/tipconnect
 spring.datasource.username = root
 spring.datasource.password =
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.mail.host = localhost
 spring.mail.port = 1025
@@ -18,5 +18,9 @@ application.security.jwt.secret-key= "2949e145c15445a20cc0d0d569e070cdcabfa18bb0
 application.security.jwt.expiration= 86400000
 application.security.jwt.refresh-token.expiration= 604800000
 
+application.userArea.urlPic.defaultAvatar = "https://firebasestorage.googleapis.com/v0/b/tipconnect-14d4b.appspot.com/o/UserArea%2FurlPic%2Favatar%2FdefaultAvatar.jpg?alt=media&token=a2d3bd79-51f1-453c-a365-4f1a6d57b1da&_gl=1*1vtkw1t*_ga*MTU4MzAyMDEyMS4xNjk4MzI5MTA0*_ga_CW55HF8NVT*MTY5OTA4NjEzMi41LjEuMTY5OTA4NjU2MS4yNi4wLjA."
+
 
 server.error.include-message= always
+
+
