--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/tipconnect
 spring.datasource.username = root
 spring.datasource.password =
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.mail.host = localhost
 spring.mail.port = 1025
